<resources>
    <string name="app_name">Fasyl GH</string>
    <string name="app_logo">app logo</string>
    <string name="contact_admin">Can\'t login? Please contact Administrator</string>
    <string name="login">Login</string>
    <string name="account_number">Account Number</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_logout">Logout</string>
    <string name="amount">Amount</string>
    <string name="balance">Balance Gh\u00A2 %1$s</string>
    <string name="customer_name">Customer: %1$s</string>
    <string name="branch_name">Branch: %1$s</string>
    <string name="airtime">Airtime</string>
</resources>
