<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    tools:context="com.dnastudios.fasylgh.activities.LoginActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/app_logo"
            android:paddingTop="16dp"
            android:src="@drawable/ic_give_money"/>

        <TextView
            android:id="@+id/app_title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Fasyl GH"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            />

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingBottom="16dp"
        android:paddingTop="16dp">

        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:visibility="gone"/>

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:isScrollContainer="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/usernameWrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/account_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_person_white_18dp"
                        android:drawablePadding="5dp"
                        android:drawableStart="@drawable/ic_person_white_18dp"
                        android:hint="@string/account_number"
                        android:inputType="text"
                        android:maxLines="1"/>

                </android.support.design.widget.TextInputLayout>


                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="65dp"
                    android:background="@drawable/login_button"
                    android:text="@string/login"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"/>


            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:text="@string/contact_admin"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            />

    </RelativeLayout>

</LinearLayout>
