<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.dnastudios.fasylgh.fragments.StoreFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        >

        <TextView
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:text="Buy Airtime and Surfline Bundles Here"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            />

        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/balanceTv"
            android:textSize="18sp"
            android:text="@string/balance"
            android:gravity="center"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="12dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/airtime"
                android:textSize="20sp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/airtime_amount_et"
                android:hint="@string/amount"
                android:textSize="18sp"
                android:inputType="numberDecimal"
                android:drawableLeft="@drawable/ic_attach_money_green_18dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/login_button"
                android:textSize="18sp"
                android:id="@+id/airtimePayBtn"
                android:textColor="@android:color/white"
                android:text="Buy"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Surfline Bundle"
                android:textSize="20sp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bundle_amount_et"
                android:hint="@string/amount"
                android:textSize="18sp"
                android:inputType="numberDecimal"
                android:drawableLeft="@drawable/ic_attach_money_green_18dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/login_button"
                android:textSize="18sp"
                android:id="@+id/bundlePayBtn"
                android:textColor="@android:color/white"
                android:text="Buy"
                />

        </LinearLayout>


    </LinearLayout>

</FrameLayout>
